update references and readme

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 	<head>
 	  <meta charset="utf-8"></meta>
 	  <title>GhiQuotation</title>
-	  <base href="/ghi-quotation"></base>
+	  <base href="/angular2-spring"></base>
 	
 	  <link th:href="@{/bower_components/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet"></link>
 	  
